# cet6word-agent

./: .gitignore  README.md  pyproject.toml
Project/cet6word/: .vercelignore  __init__.py  memory_store.py  pyproject.toml  requirements.txt  server.py  vercel.json
Project/cet6word/static/: app.js  index.html  style.css
Project/cet6word/tests/: test_api.py  test_memory_store.py
