[project]
name = "langchain-study"
version = "0.1.0"
description = "LangChain learning project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.115.0",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.32.0",
]
